--- a/.github/workflows/workflow-cmd.yaml
+++ b/.github/workflows/workflow-cmd.yaml
@@ -7,3 +7,9 @@ jobs:
         steps:
             - name: Setting up an error message
               run: echo "::error::missing semicolon"
+            - name: Setting up an warning message with params
+              run: echo "::error title=Warning title,file=app.js,line=2,endLine=3,endColumn=7::Missing Semicolon"
+            - name: Setting up an debug message with params
+              run: echo "::error title=Debug title,file=app.js,line=2,endLine=3,endColumn=7::Missing Semicolon"
+            - name: Setting up an notice message with params
+              run: echo "::error title=Notice title,file=app.js,line=2,endLine=3,endColumn=7::Missing Semicolon"
